--- a/arc/deployment.yaml
+++ b/arc/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: gitops-foundations
-        image: {dockerHubUsername}/gitops-foundations:2.0
+        image: zydu/gitops-foundations:2.0
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
